--- a/grepl-firefox/manifest.json
+++ b/grepl-firefox/manifest.json
@@ -39,5 +39,11 @@
       },
       "description": "Toggle grepl search"
     }
+  },
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "grepl@example.com"
+    }
   }
 }
