--- a/grepl-chrome/manifest.json
+++ b/grepl-chrome/manifest.json
@@ -1,29 +1,30 @@
 {
   "manifest_version": 3,
-  "name": "grepl",
-  "version": "1.0",
-  "description": "Advanced page search with regex support and highlighting",
-  
+  "name": "Grepl",
+  "version": "0.1.0",
+  "description": "Simple page search with regex support and highlighting",
+
   "permissions": [
     "activeTab",
     "tabs",
     "storage",
     "scripting"
   ],
-  
+
   "host_permissions": [
     "<all_urls>"
   ],
-  
+
   "action": {
-    "default_title": "grepl Search",
+    "default_title": "Grepl Search",
+    "default_popup": "popup-chrome.html",
     "default_icon": {
       "16": "icon16.png",
       "48": "icon48.png",
       "128": "icon128.png"
     }
   },
-  
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -32,23 +33,23 @@
       "run_at": "document_end"
     }
   ],
-  
+
   "background": {
     "service_worker": "background-chrome.js"
   },
-  
+
   "commands": {
     "toggle-search": {
       "suggested_key": {
         "default": "Ctrl+Shift+F"
       },
-      "description": "Toggle grepl search"
+      "description": "Toggle Grepl Search"
     }
   },
-  
+
   "web_accessible_resources": [
     {
-      "resources": ["popup-chrome.html", "popup-chrome.js", "popup.css"],
+      "resources": ["popup-chrome.html", "popup-chrome.js", "popup.css", "icon16.png", "icon48.svg"],
       "matches": ["<all_urls>"]
     }
   ]
