--- a/grepl-firefox/manifest.json
+++ b/grepl-firefox/manifest.json
@@ -1,25 +1,26 @@
 {
   "manifest_version": 2,
-  "name": "grepl",
-  "version": "1.0",
-  "description": "Advanced page search with regex support and highlighting",
-  
+  "name": "Grepl",
+  "version": "0.1.0",
+  "description": "Simple page search with regex support and highlighting",
+
   "permissions": [
     "activeTab",
     "tabs",
     "storage",
     "<all_urls>"
   ],
-  
+
   "browser_action": {
-    "default_title": "grepl Search",
+    "default_title": "Grepl Search",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "icon16.png",
       "48": "icon48.png",
       "128": "icon128.png"
     }
   },
-  
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -27,19 +28,21 @@
       "css": ["content.css"]
     }
   ],
-  
+
   "background": {
     "scripts": ["background-firefox.js"]
   },
-  
+
   "commands": {
     "toggle-search": {
       "suggested_key": {
         "default": "Ctrl+Shift+F"
       },
-      "description": "Toggle grepl search"
+      "description": "Toggle Grepl Search"
     }
   },
+
+  "web_accessible_resources": ["icon16.png", "icon48.svg"],
 
   "browser_specific_settings": {
     "gecko": {
