chore: update icon asset and simplify regex label
Switch 48x48 icon from SVG to PNG.
Remove "(-P)" from "Perl Regex" label in UI.
Apply minor whitespace and newline formatting.

--- a/grepl-chrome/manifest.json
+++ b/grepl-chrome/manifest.json
@@ -49,7 +49,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": ["popup-chrome.html", "popup-chrome.js", "popup.css", "icon16.png", "icon48.svg"],
+      "resources": ["popup-chrome.html", "popup-chrome.js", "popup.css", "icon16.png", "icon48.png"],
       "matches": ["<all_urls>"]
     }
   ]
